[package]
name = "xyzio"
version = "0.3.0"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]
description = "A simple xyz reader"
license = "MIT"
repository = "https://github.com/0ncorhynchus/xyzio"

[badges]
travis-ci = { repository = "0ncorhynchus/xyzio", branch = "master" }

[dependencies]
