[package]
name = "xyzio"
version = "0.3.1"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]
edition = "2018"

description = "A simple xyz reader and writer library"
documentation = "https://docs.rs/xyzio/0.3.0/xyzio"
repository = "https://github.com/0ncorhynchus/xyzio"
readme = "README.md"

license = "MIT"

[badges]
travis-ci = { repository = "0ncorhynchus/xyzio", branch = "master" }
